--- a/descartes_ikfast/test/CMakeLists.txt
+++ b/descartes_ikfast/test/CMakeLists.txt
@@ -39,23 +39,23 @@ if(NOT TARGET GTest::Main)
   set_target_properties(GTest::Main PROPERTIES INTERFACE_LINK_LIBRARIES "${GTEST_MAIN_LIBRARIES};GTest::GTest")
 endif()
 
-add_library(${PROJECT_NAME}_robot SHARED descartes_ikfast_fanuc_m20ia10l_manipulator.cpp)
-target_link_libraries(${PROJECT_NAME}_robot PUBLIC ${PROJECT_NAME})
-descartes_target_compile_options(${PROJECT_NAME}_robot PRIVATE)
-target_include_directories(${PROJECT_NAME}_robot PRIVATE
-    "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>"
-    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
-    "$<INSTALL_INTERFACE:include>")
-add_dependencies(${PROJECT_NAME}_robot ${PROJECT_NAME})
+#add_library(${PROJECT_NAME}_robot SHARED descartes_ikfast_fanuc_m20ia10l_manipulator.cpp)
+#target_link_libraries(${PROJECT_NAME}_robot PUBLIC ${PROJECT_NAME})
+#descartes_target_compile_options(${PROJECT_NAME}_robot PRIVATE)
+#target_include_directories(${PROJECT_NAME}_robot PRIVATE
+#    "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>"
+#    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
+#    "$<INSTALL_INTERFACE:include>")
+#add_dependencies(${PROJECT_NAME}_robot ${PROJECT_NAME})
 
-add_executable(${PROJECT_NAME}_unit descartes_ikfast_unit.cpp)
-target_link_libraries(${PROJECT_NAME}_unit PRIVATE GTest::GTest GTest::Main ${PROJECT_NAME}_robot)
-descartes_target_compile_options(${PROJECT_NAME}_unit PRIVATE)
-target_include_directories(${PROJECT_NAME}_unit PRIVATE
-    "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>"
-    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
-    "$<INSTALL_INTERFACE:include>")
-descartes_gtest_discover_tests(${PROJECT_NAME}_unit)
+#add_executable(${PROJECT_NAME}_unit descartes_ikfast_unit.cpp)
+#target_link_libraries(${PROJECT_NAME}_unit PRIVATE GTest::GTest GTest::Main ${PROJECT_NAME}_robot)
+#descartes_target_compile_options(${PROJECT_NAME}_unit PRIVATE)
+#target_include_directories(${PROJECT_NAME}_unit PRIVATE
+#    "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>"
+#    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
+#    "$<INSTALL_INTERFACE:include>")
+#descartes_gtest_discover_tests(${PROJECT_NAME}_unit)
 add_dependencies(${PROJECT_NAME}_unit ${PROJECT_NAME})
 add_dependencies(${PROJECT_NAME}_unit ${PROJECT_NAME}_robot)
 add_dependencies(run_tests ${PROJECT_NAME}_unit)
